text-editor done

--- a/quill/quill.html
+++ b/quill/quill.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8"/>
     <title>Yjs Quill Example</title>
     <script defer src='/socket.io/socket.io.js'></script> <!-- This should be here-->
-    <script type="text/javascript" src="/dist/quill.bundle.js" async></script>
-    <link rel=stylesheet href="/quill.css" async defer>
+    <script defer type="text/javascript" src="/dist/quill.bundle.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel=stylesheet href="/quill.css" defer>
     <link rel=stylesheet href="//cdn.quilljs.com/1.3.6/quill.snow.css" async
     defer>
     <link rel=stylesheet href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" async
@@ -14,10 +15,23 @@
     defer>
 </head>
 <body>
-  <button type="button" id="y-connect-btn">Disconnect</button>
-  <p></p>
-  <p>This is a demo of the <a href="https://github.com/yjs/yjs">Yjs</a> ⇔ <a href="https://quilljs.com/">Quill</a> binding: <a href="https://github.com/yjs/y-quill">y-quill</a>.</p>
-  <p>The content of this editor is shared with every client that visits this domain.</p>
-  <div class="ql-toolbar">toolbar</div>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand" href="#">Documet Name</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form action="/room" method='GET' class='ml-auto'>
+          <button class="btn btn-outline-primary  mr-2 my-sm-0" type="submit">Create New Doc</button>
+        </form>
+        <button id='y-connect-btn' class="btn btn-outline-danger my-sm-0" type="submit">Disconnect</button>
+    </div>
+  </nav>
+
+  <!--BootStrap-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
